# dric_publications_classification

./: .env  RSG Grantess _ 1st to 8th Call.docx  __init__.py  documentation.md  main.py  pyproject.toml  settings.py
Data/2015-2016/: raw_publications.csv
Data/2015-2016/preprocessed_files/: rsg_2015-2016_preprocessed.csv
Data/2016-2017/: raw_publications.csv
Data/2016-2017/preprocessed_files/: rsg_2016-2017_preprocessed.csv
Data/2017-2018/: raw_publications.csv
Data/2017-2018/preprocessed_files/: rsg_2017-2018_preprocessed.csv
Data/2018-2019/: raw_publications.csv
Data/2018-2019/preprocessed_files/: rsg_2018-2019_preprocessed.csv
Data/2020/: raw_publications.csv
Data/2020/preprocessed_files/: rsg_2020_preprocessed.csv
Data/2021/: raw_publications.csv
Data/2021/preprocessed_files/: rsg_2021_preprocessed.csv
Data/2022/: raw_publications.csv
Data/2022/preprocessed_files/: rsg_2022_preprocessed.csv
Data/2023/: raw_publications.csv
Data/2023/preprocessed_files/: rsg_2023_preprocessed.csv
Data/awardees_by_period/: awardees_2015-2016.csv  awardees_2016-2017.csv  awardees_2017-2018.csv  awardees_2018-2019.csv  awardees_2020.csv  awardees_2021.csv  awardees_2022.csv  awardees_2023.csv
notebooks/: analysis.ipynb
scripts/: check_dric.py  fetch_ucc_scholar.py
