[project]
name = "dric-publications-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "firecrawl>=2.15.0",
    "fuzzywuzzy[speedup]>=0.18.0",
    "groq>=0.29.0",
    "langchain>=0.3.26",
    "langchain-groq>=0.3.5",
    "pandas>=2.3.0",
    "playwright>=1.53.0",
    "python-dotenv>=1.1.1",
    "pydantic-settings>=2.2.1",
    "matplotlib>=3.10.5",
]
